zerocopy-derive/tests/ui/enum.stderr
error: unrecognized representation hint
  --> $DIR/enum.rs:17:8
   |
17 | #[repr("foo")]
   |        ^^^^^

error: unrecognized representation hint
  --> $DIR/enum.rs:23:8
   |
23 | #[repr(foo)]
   |        ^^^

error: unsupported representation for deriving FromBytes, AsBytes, or Unaligned on an enum
  --> $DIR/enum.rs:29:8
   |
29 | #[repr(transparent)]
   |        ^^^^^^^^^^^

error: conflicting representation hints
  --> $DIR/enum.rs:35:1
   |
35 | / #[repr(u8, u16)]
36 | | enum Generic4 {
37 | |     A,
38 | | }
   | |_^

error: must have a non-align #[repr(...)] attribute in order to guarantee this type's memory layout
  --> $DIR/enum.rs:40:10
   |
40 | #[derive(FromBytes)]
   |          ^^^^^^^^^

error: FromBytes requires repr of "u8", "u16", "i8", or "i16"
  --> $DIR/enum.rs:50:1
   |
50 | / #[repr(C)]
51 | | enum FromBytes1 {
52 | |     A,
53 | | }
   | |_^

error: FromBytes requires repr of "u8", "u16", "i8", or "i16"
  --> $DIR/enum.rs:56:1
   |
56 | / #[repr(usize)]
57 | | enum FromBytes2 {
58 | |     A,
59 | | }
   | |_^

error: FromBytes requires repr of "u8", "u16", "i8", or "i16"
  --> $DIR/enum.rs:62:1
   |
62 | / #[repr(isize)]
63 | | enum FromBytes3 {
64 | |     A,
65 | | }
   | |_^

error: FromBytes requires repr of "u8", "u16", "i8", or "i16"
  --> $DIR/enum.rs:68:1
   |
68 | / #[repr(u32)]
69 | | enum FromBytes4 {
70 | |     A,
71 | | }
   | |_^

error: FromBytes requires repr of "u8", "u16", "i8", or "i16"
  --> $DIR/enum.rs:74:1
   |
74 | / #[repr(i32)]
75 | | enum FromBytes5 {
76 | |     A,
77 | | }
   | |_^

error: FromBytes requires repr of "u8", "u16", "i8", or "i16"
  --> $DIR/enum.rs:80:1
   |
80 | / #[repr(u64)]
81 | | enum FromBytes6 {
82 | |     A,
83 | | }
   | |_^

error: FromBytes requires repr of "u8", "u16", "i8", or "i16"
  --> $DIR/enum.rs:86:1
   |
86 | / #[repr(i64)]
87 | | enum FromBytes7 {
88 | |     A,
89 | | }
   | |_^

error: Unaligned requires repr of "u8" or "i8", and no alignment (i.e., repr(align(N > 1)))
  --> $DIR/enum.rs:96:1
   |
96 | / #[repr(C)]
97 | | enum Unaligned1 {
98 | |     A,
99 | | }
   | |_^

error: Unaligned requires repr of "u8" or "i8", and no alignment (i.e., repr(align(N > 1)))
   --> $DIR/enum.rs:102:1
    |
102 | / #[repr(u16)]
103 | | enum Unaligned2 {
104 | |     A,
105 | | }
    | |_^

error: Unaligned requires repr of "u8" or "i8", and no alignment (i.e., repr(align(N > 1)))
   --> $DIR/enum.rs:108:1
    |
108 | / #[repr(i16)]
109 | | enum Unaligned3 {
110 | |     A,
111 | | }
    | |_^

error: Unaligned requires repr of "u8" or "i8", and no alignment (i.e., repr(align(N > 1)))
   --> $DIR/enum.rs:114:1
    |
114 | / #[repr(u32)]
115 | | enum Unaligned4 {
116 | |     A,
117 | | }
    | |_^

error: Unaligned requires repr of "u8" or "i8", and no alignment (i.e., repr(align(N > 1)))
   --> $DIR/enum.rs:120:1
    |
120 | / #[repr(i32)]
121 | | enum Unaligned5 {
122 | |     A,
123 | | }
    | |_^

error: Unaligned requires repr of "u8" or "i8", and no alignment (i.e., repr(align(N > 1)))
   --> $DIR/enum.rs:126:1
    |
126 | / #[repr(u64)]
127 | | enum Unaligned6 {
128 | |     A,
129 | | }
    | |_^

error: Unaligned requires repr of "u8" or "i8", and no alignment (i.e., repr(align(N > 1)))
   --> $DIR/enum.rs:132:1
    |
132 | / #[repr(i64)]
133 | | enum Unaligned7 {
134 | |     A,
135 | | }
    | |_^

error: Unaligned requires repr of "u8" or "i8", and no alignment (i.e., repr(align(N > 1)))
   --> $DIR/enum.rs:138:1
    |
138 | / #[repr(usize)]
139 | | enum Unaligned8 {
140 | |     A,
141 | | }
    | |_^

error: Unaligned requires repr of "u8" or "i8", and no alignment (i.e., repr(align(N > 1)))
   --> $DIR/enum.rs:144:1
    |
144 | / #[repr(isize)]
145 | | enum Unaligned9 {
146 | |     A,
147 | | }
    | |_^

error: cannot derive Unaligned with repr(align(N > 1))
   --> $DIR/enum.rs:150:1
    |
150 | / #[repr(u8, align(2))]
151 | | enum Unaligned10 {
152 | |     A,
153 | | }
    | |_^

error: cannot derive Unaligned with repr(align(N > 1))
   --> $DIR/enum.rs:156:1
    |
156 | / #[repr(i8, align(2))]
157 | | enum Unaligned11 {
158 | |     A,
159 | | }
    | |_^

error[E0565]: meta item in `repr` must be an identifier
  --> $DIR/enum.rs:17:8
   |
17 | #[repr("foo")]
   |        ^^^^^

error[E0552]: unrecognized representation hint
  --> $DIR/enum.rs:23:8
   |
23 | #[repr(foo)]
   |        ^^^

warning[E0566]: conflicting representation hints
  --> $DIR/enum.rs:35:8
   |
35 | #[repr(u8, u16)]
   |        ^^  ^^^

error: aborting due to 25 previous errors

Some errors have detailed explanations: E0552, E0565.
For more information about an error, try `rustc --explain E0552`.
